--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="header__content">
         <a class="header__logo" href="">
           <!-- <strong>Cuore Marchigiano</strong> -->
-          <img src="logo_cuoreMarchiggiano.png">
+          <img src="logo_cuoreMarchiggiano2.png">
         </a>
         <ul class="header__menu">
           <li><a href="#home">Home</a></li>
